# AI1

./: LICENSE  Makefile  README.md  allen.txt  bpe_merges.txt  bpe_tokenizer.py  bpe_vocab.json  embedding.py  positional_encoding.py  pyproject.toml  train_bpe.py  transformer_blocks.py
.github/workflows/: manual-ci.yml  manual-terminal.yml  python-tests.yml
examples/: benchmark_transformer.py  benchmark_transformer_grid.py  chatbot.py  example_decode.py  example_embed.py  example_embed_with_learned_pe.py  example_embed_with_pe.py  example_encode.py  example_learned_pe_persist.py  example_transformer_encoder.py  generate_sequence.py  infer_next_token.py  run_chat_balanced.sh  run_chat_creative.sh  run_chat_deterministic.sh  run_generate_balanced.sh  train_and_embed.py  train_next_token_head.py  train_then_chatbot.py  train_then_infer.py
tests/: test_bpe.py  test_embedding.py  test_next_token_pipeline.py  test_positional.py  test_train_then_chatbot.py  test_transformer.py
