[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe-tokenizer-embedding"
version = "0.1.0"
description = "A simple BPE tokenizer and a dependency-free embedding layer."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["bpe", "tokenizer", "nlp", "embedding"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# We ship standalone modules rather than a package directory
[tool.setuptools]
py-modules = ["bpe_tokenizer", "embedding", "positional_encoding"]

[project.urls]
Homepage = "https://github.com/OWNER/REPO"
Issues = "https://github.com/OWNER/REPO/issues"

# -------------- Linting configuration --------------

[tool.ruff]
line-length = 160
target-version = "py38"
# Exclude typical virtualenv/cache directories by default
exclude = [
  ".git",
  ".github",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
# Relax linting to prioritize runtime correctness for this educational repo.
# Keep E/F/W families but:
# - Drop import-order checks ("I") to avoid isort requirements.
# - Ignore common style nags that currently fail CI across examples/tests.
ignore = [
  "E203",  # spacing before :
  "E501",  # line length
  "W292",  # missing trailing newline at EOF
  "E702",  # multiple statements on one line
  "E741",  # ambiguous variable name (e.g., l, O, I)
  "F401",  # unused imports
  "F841",  # assigned but unused
]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.flake8]
# Match Ruff leniency to keep CI green while focusing on functionality.
max-line-length = 160
extend-ignore = ["E203", "W503", "E501", "W292", "E702", "E741", "F401", "F841"]
exclude = [
  ".git",
  ".github",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
]